[workspace]
members = ["crates/optimism/", "examples/optimism/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rustdoc.all = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"

[workspace.package]
version = "0.2.0-beta.5"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"
exclude = [".github/"]

[workspace.dependencies]
reth-optimism-payload-builder = { path = "crates/optimism", features = [
    "optimism",
] }

reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth_provider = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6", features = [
    "optimism",
] }
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6", features = [
    "optimism",
] }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6", features = [
    "optimism",
] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6", features = [
    "optimism",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6", features = [
    "optimism",
] }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.6" }
revm = { version = "8.0.0", features = [
    "std",
    "secp256k1",
], default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"

eyre = "0.6"
futures-util = "0.3.25"
tracing = "0.1.0"
alloy-sol-types = { version = "0.6.2", features = ["json"] }
alloy-rlp = "0.3.4"
