[package]
name = "optimism-suave"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
reth.workspace = true
reth-primitives.workspace = true
reth-node-api.workspace = true
reth-basic-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-node-ethereum.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true
reth-revm.workspace = true
reth-provider.workspace = true
reth-optimism-payload-builder = { path = "../../crates/optimism", features = [
    "optimism",
] }

tracing.workspace = true
futures-util.workspace = true
eyre.workspace = true

[features]
optimism = [
    "reth-primitives/optimism",
    "reth-revm/optimism",
    "reth-provider/optimism",
    "reth-rpc-types-compat/optimism",
    "reth-optimism-payload-builder/optimism",
]
